--- a/Jazzima1/Views/Home/Index.cshtml
+++ b/Jazzima1/Views/Home/Index.cshtml
@@ -18,6 +18,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
+            @*<div class="form-group">
+                <label asp-for="name" class="control-label"></label>
+                <select asp-for="name" class="form-control" asp-items="viewbag.authorid"></select>
+                <span asp-validation-for="name" class="text-danger"></span>
+            </div>*@
             <td>
                 <img class="img-thumbnail" style="max-width: 150px;" src="@item.Image" alt="" />
             </td>
