--- a/Jazzima1/Views/Albums/Details.cshtml
+++ b/Jazzima1/Views/Albums/Details.cshtml
@@ -25,9 +25,9 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Image)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
-        </dd>
+        <td>
+            <img class="img-thumbnail" style="max-width: 150px;" src="model.Album.Image" alt="" />
+        </td>
     </dl>
 </div>
 <div>
