--- a/Jazzima1/Views/Home/Index.cshtml
+++ b/Jazzima1/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Jazzima1.Models.Album>
+﻿@model Jazzima1.Models.ViewModels.MusicianAlbumViewModel
 
 @{
     ViewData["Title"] = "Home Page";
@@ -12,18 +12,27 @@
 <table class="table">
     
     <tbody>
-        @foreach (var item in Model)
-        {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Title)
+                @Html.DisplayFor(modelItem => Model.HornPlayers)
             </td>
-            @*<div class="form-group">
-                <label asp-for="name" class="control-label"></label>
-                <select asp-for="name" class="form-control" asp-items="viewbag.authorid"></select>
-                <span asp-validation-for="name" class="text-danger"></span>
-            </div>*@
             <td>
+                @foreach(var player in ViewBag.HornPlayers)
+                {
+                    <td>
+                    @player.Name;
+                    </td>
+                }
+                @ViewBag.HornPlayers
+            </td>
+            @Html.DropDownList("HornGuys","Select a value")
+
+            @*<div class="form-group">
+                <label asp-for="HornId" class="control-label"></label>
+                <select asp-for="HornId" class="form-control" asp-items="ViewBag.HornPlayers"></select>
+                <span asp-validation-for="HornId" class="text-danger"></span>
+            </div>*@
+            @*<td>
                 <img class="img-thumbnail" style="max-width: 150px;" src="@item.Image" alt="" />
             </td>
             <td>
@@ -31,7 +40,6 @@
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
-        </tr>
-        }
+        </tr>*@
     </tbody>
 </table>
