--- a/Jazzima1/Views/Albums/Details.cshtml
+++ b/Jazzima1/Views/Albums/Details.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.Image)
         </dt>
         <td>
-            <img class="img-thumbnail" style="max-width: 150px;" src="model.Album.Image" alt="" />
+            <img class="img-thumbnail" style="max-width: 300px;" src="@Model.Image" alt="" />
         </td>
     </dl>
 </div>
