got details button on homepage working

--- a/Jazzima1/Views/Home/Index.cshtml
+++ b/Jazzima1/Views/Home/Index.cshtml
@@ -83,8 +83,14 @@
 {
     @foreach (var album in Model.MatchingAlbums)
     {
-          <img class="img-thumbnail" style="max-width: 150px;" src="@album.Image" alt="" />
-    }
+        <img class="img-thumbnail" style="max-width: 150px;" src="@album.Image" alt="" />
 
-};
+
+    <form asp-action="Details" asp-route-id="@album.Id" asp-controller="Albums">
+      
+        <input class="btn btn-success" type="submit" value="details" />
+    </form>
+        }
+
+    }
 
