--- a/Jazzima1/Views/Albums/Delete.cshtml
+++ b/Jazzima1/Views/Albums/Delete.cshtml
@@ -26,14 +26,16 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Image)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
+        <dd class="col-sm-10">
+            <td>
+                <img class="img-thumbnail" style="max-width: 300px;" src="@Model.Image" alt="" />
+            </td>
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    @*<form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
-    </form>
+    </form>*@
 </div>
