--- a/Jazzima1/Views/Home/Index.cshtml
+++ b/Jazzima1/Views/Home/Index.cshtml
@@ -86,7 +86,10 @@
         <img class="img-thumbnail" style="max-width: 150px;" src="@album.Image" alt="" />
 
         <form asp-action="Details" asp-route-id="@album.Id" asp-controller="Home">
-            <input class="btn btn-success" type="submit" value="details" />
+            <input class="btn btn-success" type="submit" value="Details" />
+        </form>
+        <form asp-action="Create" asp-route-id="@album.Id" asp-controller="Albums">
+            <input class="btn btn-warning" type="submit" value="Add to Wishlist" />
         </form>
     }
 
