--- a/Jazzima1/Views/Albums/Details.cshtml
+++ b/Jazzima1/Views/Albums/Details.cshtml
@@ -30,8 +30,25 @@
         </td>
     </dl>
 </div>
+@*<div>
+    <h4>Comments</h4>
+    <dl class="row">
+        @foreach (var item in Model.Comments)
+        {
+            <dt class="col-sm-10">
+                @Html.DisplayNameFor(modelItem => item)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(modelItem => item)
+            </dd>
+        }
+        </d1>
+</div>*@
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Create" asp-route-id="@Model.Id" asp-controller="Comments">Leave A Comment</a>
+    <a asp-action="Create" asp-route-id="@Model.Id" asp-controller="Comments">
+        <input class="btn btn-success" type="submit" value="Add a Comment" />
+    </a>
     <a asp-action="Index">Back to List</a>
 </div>
