--- a/Jazzima1/Views/Comments/Create.cshtml
+++ b/Jazzima1/Views/Comments/Create.cshtml
@@ -12,13 +12,16 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
-                <span asp-validation-for="Content" class="text-danger"></span>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+        <div class="form-group">
+            <label asp-for="Content" class="control-label"></label>
+            <input asp-for="Content" class="form-control" />
+            <span asp-validation-for="Content" class="text-danger"></span>
+        <div class="form-group">
+            <input type="submit" value="Create" class="btn btn-primary" />
+        </div>
+            @*<form asp-action="Details" asp-route-id="@item.Id" asp-controller="Albums">
+                <input class="btn btn-success" type="submit" value="Details" />
+            </form>*@
         </form>
     </div>
 </div>
