--- a/Jazzima1/Views/Albums/Index.cshtml
+++ b/Jazzima1/Views/Albums/Index.cshtml
@@ -19,20 +19,20 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
+            <td class="savedalbums">
                 <img class="img-thumbnail" style="max-width: 150px;" src="@item.Album.Image" alt="" />
                 <form asp-action="Details" asp-route-id="@item.Id" asp-controller="Albums">
                     <input class="btn btn-success" type="submit" value="Details" />
                 </form>
-                <form asp-action="Delete" asp-route-id="@item.Id">
+                <a asp-controller="Albums" asp-action="Delete" asp-route-id="@item.Id">
                     <input class="btn btn-warning" type="submit" value="Delete" />
-                </form>
+                </a>
             </td>
-            <td>
+            @*<td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+            </td>*@
         </tr>
 }
     </tbody>
