--- a/Jazzima1/wwwroot/css/site.css
+++ b/Jazzima1/wwwroot/css/site.css
@@ -13,8 +13,12 @@ a {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction:row;
+  color: forestgreen;
+  background-color: forestgreen;
   border-color: #1861ac;
 }
 
@@ -69,3 +73,28 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.home-form-control {
+    /*width: 100px;*/
+}
+
+.submit-form-control {
+    flexbox: center;
+}
+
+.savedalbums {
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+.table {
+    display: flex;
+    justify-content: center;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+}
+
