--- a/Jazzima1/Views/Comments/Create.cshtml
+++ b/Jazzima1/Views/Comments/Create.cshtml
@@ -16,6 +16,7 @@
             <label asp-for="Content" class="control-label"></label>
             <input asp-for="Content" class="form-control" />
             <span asp-validation-for="Content" class="text-danger"></span>
+        </div>
         <div class="form-group">
             <input type="submit" value="Create" class="btn btn-primary" />
         </div>
