--- a/Jazzima1/wwwroot/css/site.css
+++ b/Jazzima1/wwwroot/css/site.css
@@ -17,8 +17,8 @@ a {
   justify-content: center;
   align-content: center;
   flex-direction:row;
-  color: forestgreen;
-  background-color: forestgreen;
+  color: white;
+  background-color: white;
   border-color: #1861ac;
 }
 
@@ -79,22 +79,31 @@ body {
 }
 
 .submit-form-control {
-    flexbox: center;
+
 }
 
 .savedalbums {
     display: flex;
     justify-content: space-around;
-    
+    align-content: flex-start;
+    flex-wrap: wrap;
 }
 
-.table {
+.album-table {
     display: flex;
     justify-content: center;
+    align-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
+.album-button-card {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+}
