--- a/Jazzima1/Views/Albums/Details.cshtml
+++ b/Jazzima1/Views/Albums/Details.cshtml
@@ -10,19 +10,34 @@
     <h4>Album</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ReleaseDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ReleaseDate)
         </dd>
-        <dt class = "col-sm-2">
+        @foreach (var item in Model.MusicianAlbums)
+        {
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(modelitem => item.Musician.Name)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(modelitem => item.Musician.Name)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(modelitem => item.Musician.Instrument)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(modelitem => item.Musician.Instrument)
+            </dd>
+        }
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Image)
         </dt>
         <td>
