--- a/Jazzima1/Views/Albums/Details.cshtml
+++ b/Jazzima1/Views/Albums/Details.cshtml
@@ -22,43 +22,38 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ReleaseDate)
         </dd>
+        <td>
+            <img class="img-thumbnail" style="max-width: 300px;" src="@Model.Image" alt="" />
+        </td>
         @foreach (var item in Model.MusicianAlbums)
         {
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(modelitem => item.Musician.Name)
-            </dt>
+
             <dd class="col-sm-10">
-                @Html.DisplayFor(modelitem => item.Musician.Name)
+                <strong>
+                    @Html.DisplayFor(modelitem => item.Musician.Name)
+                </strong>
             </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(modelitem => item.Musician.Instrument)
-            </dt>
+
             <dd class="col-sm-10">
                 @Html.DisplayFor(modelitem => item.Musician.Instrument)
             </dd>
         }
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-        <td>
-            <img class="img-thumbnail" style="max-width: 300px;" src="@Model.Image" alt="" />
-        </td>
     </dl>
 </div>
 @*<div>
-    <h4>Comments</h4>
-    <dl class="row">
-        @foreach (var item in Model.Comments)
-        {
-            <dt class="col-sm-10">
-                @Html.DisplayNameFor(modelItem => item)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(modelItem => item)
-            </dd>
-        }
-        </d1>
-</div>*@
+        <h4>Comments</h4>
+        <dl class="row">
+            @foreach (var item in Model.Comments)
+            {
+                <dt class="col-sm-10">
+                    @Html.DisplayNameFor(modelItem => item)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(modelItem => item)
+                </dd>
+            }
+            </d1>
+    </div>*@
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Create" asp-route-id="@Model.Id" asp-controller="Comments">Leave A Comment</a>
