--- a/Jazzima1/Views/Albums/Details.cshtml
+++ b/Jazzima1/Views/Albums/Details.cshtml
@@ -22,9 +22,6 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ReleaseDate)
         </dd>
-        <td>
-            <img class="img-thumbnail" style="max-width: 300px;" src="@Model.Image" alt="" />
-        </td>
         @foreach (var item in Model.MusicianAlbums)
         {
 
@@ -37,6 +34,18 @@
             <dd class="col-sm-10">
                 @Html.DisplayFor(modelitem => item.Musician.Instrument)
             </dd>
+        }
+        <td>
+            <img class="img-thumbnail" style="max-width: 300px;" src="@Model.Image" alt="" />
+        </td>
+        <dt class="col-sm-2">
+        Comments:
+         </dt>
+        @foreach (var item in Model.Comments)
+        {
+        <dd class="col-sm-10">
+            @Html.DisplayFor(modelItem => item.Content)
+        </dd>
         }
     </dl>
 </div>
