--- a/Jazzima1/Views/Albums/Index.cshtml
+++ b/Jazzima1/Views/Albums/Index.cshtml
@@ -17,10 +17,10 @@
     </thead>
     <tbody>*@
 @foreach (var item in Model) {
-        <div>
-            <a class="album-button-card">
+        <div class="album-button-card">
+            <a>
                 <img class="img-thumbnail" style="max-width: 150px;" src="@item.Album.Image" alt="" />
-                <a asp-action="Details" asp-route-id="@item.Id" asp-controller="Albums">
+                <a asp-action="Details" asp-route-id="@item.AlbumId" asp-controller="Albums">
                     <input class="btn btn-success" type="submit" value="Details" />
                 </a>
                 <a asp-controller="SavedAlbums" asp-action="Delete" asp-route-id="@item.Id">
