--- a/Jazzima1/wwwroot/css/site.css
+++ b/Jazzima1/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
+﻿/*/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
@@ -13,97 +13,61 @@ a {
 }
 
 .btn-primary {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  flex-direction:row;
-  /*color: white;
-  background-color: white;*/
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: row;
+    color: forestgreen;
+    background-color: forestgreen;
+    border-color: #1861ac;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+@@ -69,3 +73,28 @@ body {
+    white-space: nowrap;
+    line-height: 60px; /* Vertically center the text there */
 }
 
 .home-form-control {
     /*width: 100px;*/
 }
 
-.submit-form-control {
 
+.submit-form-control {
+    flexbox: center;
 }
+
 
 .savedalbums {
     display: flex;
     justify-content: space-around;
-    /*align-content: flex-start;*/
-    flex-wrap: wrap;
 }
 
-.album-table {
+.table {
     display: flex;
-    /*justify-content: center;*/
-    align-content: space-evenly;
-    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .container {
     display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.home-album-card {
+    display: flex;
+    flex-direction: column;
+}
+
+.home-album-list {
+    display: flex;
+    flex-direction: row;
 }
 
 .album-button-card {
     display: flex;
+    justify-content: flex-start
+    flex-direction: row;
     flex-wrap: wrap;
     /*align-content: center;*/
-}
+}*/
