--- a/Jazzima1/wwwroot/css/site.css
+++ b/Jazzima1/wwwroot/css/site.css
@@ -14,7 +14,7 @@ a {
 
 .btn-primary {
     color: #fff;
-    background-color: #1b6ec2;
+    background-color: blue;
     display: flex;
     justify-content: center;
     align-content: center;
@@ -70,4 +70,9 @@ a {
     flex-direction: row;
     flex-wrap: wrap;
     /*align-content: center;*/
-}*/
+}
+
+.name-instrument-list {
+    display: flex;
+    justify-content: flex-end;
+}
