--- a/Jazzima1/Views/Albums/Details.cshtml
+++ b/Jazzima1/Views/Albums/Details.cshtml
@@ -1,8 +1,10 @@
 ﻿@model Jazzima1.Models.Album
 
+
 @{
     ViewData["Title"] = "Details";
 }
+
 
 <h1>Details</h1>
 
@@ -22,53 +24,66 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ReleaseDate)
         </dd>
-        <div class="name-instrument-list">
+        <td>
+            <img class="img-thumbnail" style="max-width: 300px;" src="@Model.Image" alt="" />
+        </td>
         @foreach (var item in Model.MusicianAlbums)
         {
-
             <dd class="col-sm-10">
                 <strong>
                     @Html.DisplayFor(modelitem => item.Musician.Name)
                 </strong>
             </dd>
-
             <dd class="col-sm-10">
                 @Html.DisplayFor(modelitem => item.Musician.Instrument)
             </dd>
         }
-        </div>
-        <td>
-            <img class="img-thumbnail" style="max-width: 300px;" src="@Model.Image" alt="" />
-        </td>
         <dt class="col-sm-2">
-        Comments:
-         </dt>
-        @foreach (var item in Model.Comments)
-        {
-            @if (item.ApplicationUser.FirstName != null)
-            {
-                @item.ApplicationUser.FirstName
-            }
-        <dd class="col-sm-10">
-            @Html.DisplayFor(modelItem => item.Content)
-        </dd>
-        }
-    </dl>
-</div>
-@*<div>
-        <h4>Comments</h4>
-        <dl class="row">
+            Comments:
+        </dt>
+        <div>
             @foreach (var item in Model.Comments)
             {
-                <dt class="col-sm-10">
-                    @Html.DisplayNameFor(modelItem => item)
-                </dt>
+                @if (item.ApplicationUser.FirstName != null)
+                {
+                    @item.ApplicationUser.FirstName
+                }
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(modelItem => item)
+                    @Html.DisplayFor(modelItem => item.Content)
                 </dd>
             }
+        </div>
+    </dl>
+</div>
+
+@*<div>
+
+        <h4>Comments</h4>
+
+        <dl class="row">
+
+            @foreach (var item in Model.Comments)
+
+            {
+
+                <dt class="col-sm-10">
+
+                    @Html.DisplayNameFor(modelItem => item)
+
+                </dt>
+
+                <dd class="col-sm-10">
+
+                    @Html.DisplayFor(modelItem => item)
+
+                </dd>
+
+            }
+
             </d1>
+
     </div>*@
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Create" asp-route-id="@Model.Id" asp-controller="Comments">Leave A Comment</a>
