--- a/Jazzima1/Views/Albums/Index.cshtml
+++ b/Jazzima1/Views/Albums/Index.cshtml
@@ -4,30 +4,37 @@
     ViewData["Title"] = "Index";
 }
 
-<div class="savedalbums">
+    <div class="savedalbums">
 
-<div class="table">
-    @*<thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Album.Image)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>*@
-@foreach (var item in Model) {
-        <div class="album-button-card">
-            <a>
-                <img class="img-thumbnail" style="max-width: 150px;" src="@item.Album.Image" alt="" />
-                <a asp-action="Details" asp-route-id="@item.AlbumId" asp-controller="Albums">
-                    <input class="btn btn-success" type="submit" value="Details" />
-                </a>
-                <a asp-controller="SavedAlbums" asp-action="Delete" asp-route-id="@item.Id">
-                    <input class="btn btn-warning" type="submit" value="Delete" />
-                </a>
+        <form asp-action="Index" asp-controller="SavedAlbums" asp-route-buttonValue=null>
+            <label>Search by Musician: </label>
+            <input name="searchQuery" type="text" />
+            <input class="btn btn-success" type="submit" value="Search" />
+        </form>
+
+        <div class="table">
+            @*<thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Album.Image)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>*@
+            @foreach (var item in Model)
+            {
+                <div class="album-button-card">
+                    <a>
+                        <img class="img-thumbnail" style="max-width: 150px;" src="@item.Album.Image" alt="" />
+                        <a asp-action="Details" asp-route-id="@item.AlbumId" asp-controller="Albums">
+                            <input class="btn btn-success" type="submit" value="Details" />
+                        </a>
+                        <a asp-controller="SavedAlbums" asp-action="Delete" asp-route-id="@item.Id">
+                            <input class="btn btn-warning" type="submit" value="Delete" />
+                        </a>
+                </div>
+            }
         </div>
-}
     </div>
-</div>
 </div>
