--- a/Jazzima1/Views/Albums/Details.cshtml
+++ b/Jazzima1/Views/Albums/Details.cshtml
@@ -38,6 +38,7 @@
                 @Html.DisplayFor(modelitem => item.Musician.Instrument)
             </dd>
         }
+        <div>
         <dt class="col-sm-2">
             Comments:
         </dt>
@@ -53,6 +54,7 @@
                 </dd>
             }
         </div>
+      </div>
     </dl>
 </div>
 
@@ -85,10 +87,11 @@
     </div>*@
 
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Create" asp-route-id="@Model.Id" asp-controller="Comments">Leave A Comment</a>
     <a asp-action="Create" asp-route-id="@Model.Id" asp-controller="Comments">
         <input class="btn btn-success" type="submit" value="Add a Comment" />
+    </a>
+    <a asp-action="Edit" asp-route-id="@Model.Id" asp-controller="Comments">
+        <input class="btn btn-success" type="submit" value="Edit a Comment" />
     </a>
     <a asp-action="Index">Back to List</a>
 </div>
